--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Kendi anahtarlarını buraya yaz (bu dosyayı paylaşma!)
 
-GEMINI_API_KEY=buraya_gemini_anahtarin
-TELEGRAM_BOT_TOKEN=buraya_telegram_token
-TELEGRAM_CHAT_ID=buraya_chat_id
+GEMINI_API_KEY=AIzaSyDjQBSVaHFerUBPoizDqhOqCpRTVAuGrwM
+TELEGRAM_BOT_TOKEN=8385745600:AAFRf0-qUiy8ooJfvzGcn_MpL77YXONGHis
+TELEGRAM_CHAT_ID=7076964315
